Remove `removeFirst` entirely
not just `Integer removeFirst(...)`